--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,133 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.container {
+  width: 100%;
+  height: 100vh;
+  background: #ece9e6; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ffffff,
+    #ece9e6
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ffffff,
+    #ece9e6
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+header h2 {
+  font-size: 30px;
+  font-family: 'Roboto', sans-serif;
+}
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 80px;
+  background: rgb(233, 223, 223);
+}
+img {
+  height: 100%;
+}
+.main {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.main h1 {
+  font-size: 40px;
+  text-transform: uppercase;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-bottom: 20px;
+}
+#name {
+  font-size: 15px;
+  border: 1px solid black;
+  text-align: center;
+  padding: 10px 40px;
+}
+.btn {
+  border: none;
+  background: grey;
+  padding: 10px 50px;
+  margin-top: 15px;
+  transition-duration: 0.4s;
+}
+footer {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  background: rgb(233, 223, 223);
+}
+.btn:hover {
+  background: #383737;
+  color: #ffffff;
+}
+/* .flex-container {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+ 
+    
+  } */
+.user {
+  padding: 10px;
+  margin: 10px;
+  width: 250px;
+  height: 250px;
+  background: rgb(233, 223, 223);
+  border-radius: 10px;
+  box-shadow: 2px 2px 4px rgba(175, 171, 171, 0.5);
+}
+
+#search {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  align-items: center;
+  margin: 20px;
+  padding: 10px;
+  width: 40%;
+}
+#C {
+  margin-left: auto;
+  font-size: 20px;
+  background: rgb(116, 109, 109);
+  padding: 10px 30px;
+}
+header button {
+  margin: 0 20px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  transition-duration: 0.5s;
+}
+header button:hover {
+  background: rgb(182, 116, 62);
+}
+#card1 {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+.user img {
+  width: 75%;
+}
